Marketing email updates

--- a/email_previews/welcome_day7.html
+++ b/email_previews/welcome_day7.html
@@ -23,7 +23,7 @@
                     <tr>
                         <td style="padding: 40px;">
                             <p style="margin: 0 0 24px; color: #4b5563; font-size: 16px; line-height: 1.6;">
-                                You've been with us for a week! Here are some features you might not have discovered yet:
+                                Here are some features you might not have discovered yet:
                             </p>
 
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 16px;">
@@ -65,7 +65,7 @@
 
                             <p style="margin: 0; color: #4b5563; font-size: 14px; line-height: 1.5;">
                                 Happy planting! 🌿<br>
-                                <em>The PlantCareAI Team</em>
+                                Ellen
                             </p>
                         </td>
                     </tr>
