--- a/email_previews/welcome_day3.html
+++ b/email_previews/welcome_day3.html
@@ -56,7 +56,7 @@
 
                             <p style="margin: 0; color: #4b5563; font-size: 14px; line-height: 1.5;">
                                 Keep growing! 🌿<br>
-                                <em>The PlantCareAI Team</em>
+                                Ellen
                             </p>
                         </td>
                     </tr>
