--- a/email_previews/welcome_day7.html
+++ b/email_previews/welcome_day7.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get More from PlantCareAI</title>
+    <title>Your Plants Check the Weather Now</title>
 </head>
 <body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background-color: #f3f4f6;">
     <table width="100%" cellpadding="0" cellspacing="0" style="background-color: #f3f4f6; padding: 20px;">
@@ -14,8 +13,8 @@
                     <!-- Header -->
                     <tr>
                         <td style="background: linear-gradient(135deg, #10b981 0%, #06b6d4 100%); padding: 40px 40px 30px; text-align: center;">
-                            <div style="font-size: 48px; margin-bottom: 16px;">✨</div>
-                            <h1 style="margin: 0; color: #ffffff; font-size: 24px; font-weight: 600;">Getting the Most from PlantCareAI</h1>
+                            <div style="font-size: 48px; margin-bottom: 16px;" role="img" aria-label="weather">🌦️</div>
+                            <h1 style="margin: 0; color: #ffffff; font-size: 24px; font-weight: 600;">Your Plants Check the Weather Now</h1>
                         </td>
                     </tr>
 
@@ -23,15 +22,15 @@
                     <tr>
                         <td style="padding: 40px;">
                             <p style="margin: 0 0 24px; color: #4b5563; font-size: 16px; line-height: 1.6;">
-                                Here are some features you might not have discovered yet:
+                                Here's something most people don't realize about PlantCareAI: <strong>it adjusts your reminders based on weather.</strong>
                             </p>
 
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 16px;">
                                 <tr>
-                                    <td style="padding: 20px; background-color: #fef3c7; border-radius: 8px;">
-                                        <h3 style="margin: 0 0 8px; color: #92400e; font-size: 16px; font-weight: 600;">🤖 AI Plant Doctor</h3>
-                                        <p style="margin: 0; color: #92400e; font-size: 14px; line-height: 1.5;">
-                                            Describe symptoms or upload a photo, and our AI will help diagnose issues and suggest solutions. "My pothos has yellow leaves" → instant help!
+                                    <td style="padding: 20px; background-color: #dbeafe; border-radius: 8px;">
+                                        <h3 style="margin: 0 0 8px; color: #1e40af; font-size: 16px; font-weight: 600;"><span role="img" aria-label="rain">☔</span> Rain expected tomorrow?</h3>
+                                        <p style="margin: 0; color: #1e40af; font-size: 14px; line-height: 1.5;">
+                                            Outdoor watering reminders get postponed automatically. No more overwatering!
                                         </p>
                                     </td>
                                 </tr>
@@ -39,10 +38,10 @@
 
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 16px;">
                                 <tr>
-                                    <td style="padding: 20px; background-color: #dbeafe; border-radius: 8px;">
-                                        <h3 style="margin: 0 0 8px; color: #1e40af; font-size: 16px; font-weight: 600;">⏰ Smart Reminders</h3>
-                                        <p style="margin: 0; color: #1e40af; font-size: 14px; line-height: 1.5;">
-                                            Set watering, fertilizing, and repotting reminders. We'll even adjust suggestions based on weather conditions in your area!
+                                    <td style="padding: 20px; background-color: #fef3c7; border-radius: 8px;">
+                                        <h3 style="margin: 0 0 8px; color: #92400e; font-size: 16px; font-weight: 600;"><span role="img" aria-label="cold">🥶</span> Frost warning?</h3>
+                                        <p style="margin: 0; color: #92400e; font-size: 14px; line-height: 1.5;">
+                                            You'll get a heads up to move sensitive plants indoors or cover them up.
                                         </p>
                                     </td>
                                 </tr>
@@ -50,26 +49,44 @@
 
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 24px;">
                                 <tr>
-                                    <td style="padding: 20px; background-color: #ecfdf5; border-radius: 8px;">
-                                        <h3 style="margin: 0 0 8px; color: #065f46; font-size: 16px; font-weight: 600;">📔 Plant Journal</h3>
-                                        <p style="margin: 0; color: #065f46; font-size: 14px; line-height: 1.5;">
-                                            Track your plant's progress with photos and notes. Perfect for spotting patterns and celebrating growth milestones!
+                                    <td style="padding: 20px; background-color: #fee2e2; border-radius: 8px;">
+                                        <h3 style="margin: 0 0 8px; color: #991b1b; font-size: 16px; font-weight: 600;"><span role="img" aria-label="hot">🔥</span> Heatwave coming?</h3>
+                                        <p style="margin: 0; color: #991b1b; font-size: 14px; line-height: 1.5;">
+                                            We'll suggest extra watering and shade for plants that need it.
                                         </p>
                                     </td>
                                 </tr>
                             </table>
 
-                            <p style="margin: 0 0 24px; color: #4b5563; font-size: 14px; line-height: 1.5;">
-                                Have questions or feedback? Just reply to this email — we'd love to hear from you!
-                            </p>
+                            <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 24px;">
+                                <tr>
+                                    <td style="background-color: #ecfdf5; border-radius: 8px; padding: 20px; text-align: center;">
+                                        <p style="margin: 0 0 8px; color: #065f46; font-size: 14px; font-weight: 600;">
+                                            <span role="img" aria-label="location">📍</span> Make sure your location is set in Settings
+                                        </p>
+                                        <p style="margin: 0; color: #047857; font-size: 13px;">
+                                            This is how we know what weather to expect in your area.
+                                        </p>
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 24px;">
+                                <tr>
+                                    <td align="center">
+                                        <a href="https://plantcareai.app/dashboard/account" style="display: inline-block; background-color: #10b981; color: #ffffff; text-decoration: none; padding: 14px 32px; border-radius: 8px; font-weight: 600; font-size: 14px;">
+                                            Check Your Settings →
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
 
                             <p style="margin: 0; color: #4b5563; font-size: 14px; line-height: 1.5;">
-                                Happy planting! 🌿<br>
+                                Happy growing! <span role="img" aria-label="plant">🌿</span><br>
                                 Ellen
                             </p>
                         </td>
                     </tr>
-
 
                     <!-- Footer -->
                     <tr>
@@ -78,7 +95,7 @@
                                 You received this because you signed up for PlantCareAI updates.
                             </p>
                             <p style="margin: 0; color: #9ca3af; font-size: 11px; text-align: center;">
-                                <a href="https://plantcareai.app/unsubscribe?token=test-token" style="color: #9ca3af; text-decoration: underline;">Unsubscribe</a>
+                                <a href="https://plantcareai.app/unsubscribe/test-token" style="color: #9ca3af; text-decoration: underline;">Unsubscribe</a>
                                 from marketing emails
                             </p>
                         </td>
