--- a/email_previews/welcome_day7.html
+++ b/email_previews/welcome_day7.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +14,7 @@
                     <!-- Header -->
                     <tr>
                         <td style="background: linear-gradient(135deg, #10b981 0%, #06b6d4 100%); padding: 40px 40px 30px; text-align: center;">
-                            <div style="font-size: 48px; margin-bottom: 16px;" role="img" aria-label="weather">🌦️</div>
+                            <div style="font-size: 48px; margin-bottom: 16px;">🌦️</div>
                             <h1 style="margin: 0; color: #ffffff; font-size: 24px; font-weight: 600;">Your Plants Check the Weather Now</h1>
                         </td>
                     </tr>
@@ -28,7 +29,7 @@
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 16px;">
                                 <tr>
                                     <td style="padding: 20px; background-color: #dbeafe; border-radius: 8px;">
-                                        <h3 style="margin: 0 0 8px; color: #1e40af; font-size: 16px; font-weight: 600;"><span role="img" aria-label="rain">☔</span> Rain expected tomorrow?</h3>
+                                        <h3 style="margin: 0 0 8px; color: #1e40af; font-size: 16px; font-weight: 600;">☔ Rain expected tomorrow?</h3>
                                         <p style="margin: 0; color: #1e40af; font-size: 14px; line-height: 1.5;">
                                             Outdoor watering reminders get postponed automatically. No more overwatering!
                                         </p>
@@ -39,7 +40,7 @@
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 16px;">
                                 <tr>
                                     <td style="padding: 20px; background-color: #fef3c7; border-radius: 8px;">
-                                        <h3 style="margin: 0 0 8px; color: #92400e; font-size: 16px; font-weight: 600;"><span role="img" aria-label="cold">🥶</span> Frost warning?</h3>
+                                        <h3 style="margin: 0 0 8px; color: #92400e; font-size: 16px; font-weight: 600;">🥶 Frost warning?</h3>
                                         <p style="margin: 0; color: #92400e; font-size: 14px; line-height: 1.5;">
                                             You'll get a heads up to move sensitive plants indoors or cover them up.
                                         </p>
@@ -50,7 +51,7 @@
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 24px;">
                                 <tr>
                                     <td style="padding: 20px; background-color: #fee2e2; border-radius: 8px;">
-                                        <h3 style="margin: 0 0 8px; color: #991b1b; font-size: 16px; font-weight: 600;"><span role="img" aria-label="hot">🔥</span> Heatwave coming?</h3>
+                                        <h3 style="margin: 0 0 8px; color: #991b1b; font-size: 16px; font-weight: 600;">🔥 Heatwave coming?</h3>
                                         <p style="margin: 0; color: #991b1b; font-size: 14px; line-height: 1.5;">
                                             We'll suggest extra watering and shade for plants that need it.
                                         </p>
@@ -58,35 +59,34 @@
                                 </tr>
                             </table>
 
+                            <p style="margin: 0 0 16px; color: #4b5563; font-size: 14px; line-height: 1.6;">
+                                This happens automatically — you don't have to do anything. Just make sure your location is set in settings.
+                            </p>
+
                             <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 24px;">
                                 <tr>
                                     <td style="background-color: #ecfdf5; border-radius: 8px; padding: 20px; text-align: center;">
                                         <p style="margin: 0 0 8px; color: #065f46; font-size: 14px; font-weight: 600;">
-                                            <span role="img" aria-label="location">📍</span> Make sure your location is set in Settings
+                                            💡 Not getting weather adjustments?
                                         </p>
                                         <p style="margin: 0; color: #047857; font-size: 13px;">
-                                            This is how we know what weather to expect in your area.
+                                            Make sure location permissions are enabled, or set your city manually in settings.
                                         </p>
                                     </td>
                                 </tr>
                             </table>
 
-                            <table width="100%" cellpadding="0" cellspacing="0" style="margin: 0 0 24px;">
-                                <tr>
-                                    <td align="center">
-                                        <a href="https://plantcareai.app/dashboard/account" style="display: inline-block; background-color: #10b981; color: #ffffff; text-decoration: none; padding: 14px 32px; border-radius: 8px; font-weight: 600; font-size: 14px;">
-                                            Check Your Settings →
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
+                            <p style="margin: 0 0 24px; color: #4b5563; font-size: 14px; line-height: 1.5;">
+                                Honestly, this single feature has saved me from overwatering more times than I can count. Turns out plants don't need water when it's about to rain. Who knew? (The AI knew.)
+                            </p>
 
                             <p style="margin: 0; color: #4b5563; font-size: 14px; line-height: 1.5;">
-                                Happy growing! <span role="img" aria-label="plant">🌿</span><br>
+                                Happy growing! 🌿<br>
                                 Ellen
                             </p>
                         </td>
                     </tr>
+
 
                     <!-- Footer -->
                     <tr>
@@ -95,7 +95,7 @@
                                 You received this because you signed up for PlantCareAI updates.
                             </p>
                             <p style="margin: 0; color: #9ca3af; font-size: 11px; text-align: center;">
-                                <a href="https://plantcareai.app/unsubscribe/test-token" style="color: #9ca3af; text-decoration: underline;">Unsubscribe</a>
+                                <a href="https://plantcareai.app/unsubscribe?token=test-token" style="color: #9ca3af; text-decoration: underline;">Unsubscribe</a>
                                 from marketing emails
                             </p>
                         </td>
